# gobbler

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
browser-extension/: CLAUDE.md  README.md  background.js  content.js  injected-executor.js  manifest.json  popup.html  popup.js
config/: config.example.yml
docs/: PRD-001-testing-infrastructure.md  PRD-002-batch-processing.md  PRD-003-advanced-crawl4ai.md  PRD-004-monitoring-observability.md  PRD-005-hot-reload-config.md  README.md
examples/: browser_automation.md  claude_desktop_config.json  integration_example.py
src/gobbler_mcp/: __init__.py  __main__.py  config.py  config_watcher.py  http_server.py  logging_config.py  metrics.py  metrics_server.py  server.py  worker.py
src/gobbler_mcp/batch/: __init__.py  batch_manager.py  file_batch.py  models.py  progress_tracker.py  webpage_batch.py  youtube_batch.py
src/gobbler_mcp/converters/: __init__.py  audio.py  document.py  webpage.py  webpage_selector.py  youtube.py
src/gobbler_mcp/crawlers/: __init__.py  interactive_session.py  session_manager.py  site_crawler.py
src/gobbler_mcp/utils/: __init__.py  file_handler.py  frontmatter.py  health.py  http_client.py  queue.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_whisper_performance.py
tests/e2e/: __init__.py
tests/fixtures/: E2E_TEST_GUIDE.md  README.md  test_config.json  test_links.md  webpage_urls.txt  youtube_playlist.txt  youtube_urls.txt
tests/fixtures/batch_audio/: README.md
tests/fixtures/batch_documents/: README.md
tests/fixtures/batch_videos/: README.md
tests/fixtures/expected_outputs/: youtube_transcript.md
tests/integration/: __init__.py  test_config_hot_reload.py  test_metrics_endpoint.py  test_redis_queue.py
tests/unit/: __init__.py  test_audio_converter.py  test_batch_manager.py  test_batch_models.py  test_config.py  test_config_watcher.py  test_file_handler.py  test_frontmatter.py  test_logging.py  test_metrics.py  test_webpage_selector.py  test_youtube_converter.py
